Updated ReadMe and made code adjustments to SASS to adhere to recommendations as there was a deprecation warning.  Having CSS after a mixin will no longer be accepted unless it is wrapped with '& { }'.

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -61,14 +61,15 @@
   &__buttons {
     @include button-base;
     @include mobile-labels-links-buttons;
-    color: $cloud;
-    background-color: $graphite;
-    border: none;
-    width: 10.25rem;
-
+    & {
+      color: $cloud;
+      background-color: $graphite;
+      border: none;
+      width: 10.25rem;
+    }
 
     @include tablet-breakpoint {
-      @include labels-links-buttons
+      @include labels-links-buttons;
     }
 
     &--active {
