--- a/src/components/InventoryList/InventoryList.scss
+++ b/src/components/InventoryList/InventoryList.scss
@@ -1,7 +1,6 @@
 @use "../../styles/partials/mixins.scss" as *;
 @use "../../styles/partials/variables.scss" as *;
 
-
 .inv {
   border-bottom: 1px solid #bdc5d5;
   padding-bottom: 1.5rem;
@@ -14,7 +13,7 @@
     display: flex;
 
     @include tablet-breakpoint {
-        justify-content: flex-start;
+      justify-content: flex-start;
     }
   }
 
@@ -23,7 +22,7 @@
     width: 1.25rem;
 
     @include tablet-breakpoint {
-        height: 1.375rem;
+      height: 1.375rem;
     }
   }
 
@@ -171,42 +170,49 @@
     &--instock {
       @include button-instock;
       @include button-base;
-      border: none;
+      & {
+        border: none;
+      }
       @include mobile-labels-links-buttons;
-      display: flex;
-      align-items: center;
-    
-      width: 4.9rem;
-      height: 1.5rem;
-    
+      & {
+        display: flex;
+        align-items: center;
+        width: 4.9rem;
+        height: 1.5rem;
+      }
+
       @include tablet-breakpoint {
         width: 5rem;
         height: 1.625rem;
       }
-      &:hover{ 
+      &:hover {
         cursor: auto;
       }
     }
 
     &--outofstock {
-        @include button-outofstock;
-        @include button-base;
+      @include button-outofstock;
+      @include button-base;
+      & {
         border: none;
-        @include mobile-labels-links-buttons;
+      }
+      @include mobile-labels-links-buttons;
+      & {
         display: flex;
         align-items: center;
-      
+
         width: 6.4rem;
         height: 1.5rem;
-      
-        @include tablet-breakpoint {
-          width: 6.6rem;
-          height: 1.625rem;
-        }
-        &:hover{ 
-          cursor: auto;
-        }
       }
+
+      @include tablet-breakpoint {
+        width: 6.6rem;
+        height: 1.625rem;
+      }
+      &:hover {
+        cursor: auto;
+      }
+    }
 
     @include tablet-breakpoint {
       @include body-medium;
@@ -214,7 +220,9 @@
 
     &--blue {
       @include mobile-labels-links-buttons;
-      color: $instock-indigo;
+      & {
+        color: $instock-indigo;
+      }
 
       @include tablet-breakpoint {
         @include labels-links-buttons;
