--- a/src/components/WarehouseInventoryList/WarehouseInventoryList.scss
+++ b/src/components/WarehouseInventoryList/WarehouseInventoryList.scss
@@ -82,14 +82,16 @@
 
     @include tablet-breakpoint {
       @include mobile-body-small;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      width: 100%;
-      height: 40px;
-      background-color: $light-grey;
-      padding-left: 1rem;
-      padding-right: 1rem;
+      & {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        height: 40px;
+        background-color: $light-grey;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
     }
   }
 
@@ -161,13 +163,16 @@
     &--instock {
       @include button-instock;
       @include button-base;
-      border: none;
+      & {
+        border: none;
+      }
       @include mobile-labels-links-buttons;
-      display: flex;
-      align-items: center;
-
-      width: 4.9rem;
-      height: 1.5rem;
+      & {
+        display: flex;
+        align-items: center;
+        width: 4.9rem;
+        height: 1.5rem;
+      }
 
       @include tablet-breakpoint {
         width: 5rem;
@@ -178,13 +183,17 @@
     &--outofstock {
       @include button-outofstock;
       @include button-base;
-      border: none;
+      & {
+        border: none;
+      }
       @include mobile-labels-links-buttons;
-      display: flex;
-      align-items: center;
+      & {
+        display: flex;
+        align-items: center;
 
-      width: 6.4rem;
-      height: 1.5rem;
+        width: 6.4rem;
+        height: 1.5rem;
+      }
 
       @include tablet-breakpoint {
         width: 6.6rem;
@@ -198,7 +207,9 @@
 
     &--blue {
       @include mobile-labels-links-buttons;
-      color: $instock-indigo;
+      & {
+        color: $instock-indigo;
+      }
 
       @include tablet-breakpoint {
         @include labels-links-buttons;
