--- a/src/components/WarehouseList/WarehouseList.scss
+++ b/src/components/WarehouseList/WarehouseList.scss
@@ -55,14 +55,16 @@
     border-radius: 4px 4px 0 0;
     @include tablet-breakpoint {
       @include mobile-body-small;
-      display: flex;
-      align-items: center;
-      justify-content: space-around;
-      width: 100%;
-      height: 2.5rem;
-      background-color: $light-grey;
-      padding-left: 1rem;
-      padding-right: 1rem;
+      & {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;
+        height: 2.5rem;
+        background-color: $light-grey;
+        padding-left: 1rem;
+        padding-right: 1rem;
+      }
     }
   }
   &__card {
@@ -121,7 +123,9 @@
     }
     &--blue {
       @include mobile-labels-links-buttons;
-      color: $instock-indigo;
+      & {
+        color: $instock-indigo;
+      }
       @include tablet-breakpoint {
         @include labels-links-buttons;
       }
